examples/test/testpolicy18194.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18194
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key35: value27
      key2: value29
      key18: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value8
          key41: value8
          key17: value5
      podSelector:
        matchLabels:
          key32: value37
          key9: value33
          key31: value39
